# sigic-geonode-importer

./: README.md  pyproject.toml  release.sh  setup.cfg  setup.py
.github/workflows/: backport.yml  publish-whl.yml  runtests.yml
importer/: __init__.py  celery_tasks.py  datastore.py  models.py  orchestrator.py  publisher.py  settings.py  utils.py
importer/api/: tests.py  urls.py  views.py
importer/handlers/: README.md  apps.py  base.py  tests.py  utils.py
importer/handlers/common/: metadata.py  raster.py  remote.py  test_remote.py  tests_raster.py  tests_vector.py  vector.py
importer/handlers/csv/: handler.py  tests.py
importer/handlers/excel/: exceptions.py  handler.py
importer/handlers/geojson/: handler.py  tests.py
importer/handlers/geotiff/: handler.py  tests.py
importer/handlers/gpkg/: handler.py  tasks.py  tests.py
importer/handlers/kml/: handler.py  tests.py
importer/handlers/remote/: tiles3d.py  wms.py
importer/handlers/shapefile/: handler.py  tests.py
importer/handlers/sld/: handler.py  tests.py
importer/handlers/tiles3d/: handler.py  tests.py
importer/handlers/xls/: exceptions.py  handler.py  tests.py
importer/handlers/xlsx/: __init__.bak.py  __init__.py  exceptions.py  handler.bak.py  handler.py  tests.py
importer/handlers/xml/: handler.py  tests.py
importer/migrations/: 0006_dataset_migration.py  0007_align_resourcehandler_with_asset.py
importer/tests/end2end/: test_end2end.py  test_end2end_copy.py
importer/tests/unit/: test_dastore.py  test_models.py  test_orchestrator.py  (+2 more)
src/: setup.py
src/importer/: apps.py
(+8 files in other folders)
